Termine el modulo admin
